[package]
name = "cando"
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/satyajeet104/cando"
authors = ["Satyajeet Singh <satyajeet104@gmail.com>"]

[dependencies]
anyhow = "1.0.91"
cursor = "2.3.0"
futures = "0.3.31"
named-lock = "0.4.1"
openssl-sys = { version = "0.9.104", features = ["vendored"] }
rattler = "0.27.16"
rattler_conda_types = "0.28.3"
rattler_lock = "0.22.28"
rattler_package_streaming = "0.22.10"
reqwest = "0.12.8"
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34"
sha256 = "1.5.0"
tokio = { version = "1.41.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-retry = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.24.0"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.81.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
